fix shop page overflow issue

--- a/src/styles/page/shop.module.css
+++ b/src/styles/page/shop.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .shopPage > main {
   max-width: 1400px;
